--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "better-sqlite3": "^12.4.1",
     "discord.js": "^14.23.2",
     "dotenv": "^17.2.3",
+    "linkedom": "^0.18.12",
     "node-cron": "^4.2.1"
   },
   "devDependencies": {
